--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
+	<head>
+		<title>GIT 수업</title>
+	</head>
 	<body>
-		<h1>Git</h1>
 		<header>
 			<h1>Git</h1>
 		</header>
+		<ul>
+			<li>저장소</li>
+			<li>버전</li>
+		<ul>
 	</body>
 </html>
