--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
-	<head></head>
+	<head>
+		<title>
+			Git 소개
+		</title>
+	</head>
 	<body>
 		<header>
 			<h1>Git</h1>
 		</header>
 	</body>
-</html>
+</html> 
