--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 			<h1>Git</h1>
 		</header>
 		<ul>
-			<li>Git이란?</li>
+			<li>Git이란?</li> 
 			<li>버전</li>
 			<li>Branch</li>
 			<li>브랜치</li>
 			<li>충돌</li>
 			<li>충돌해결</li>
 			<li>원격저장소</li>
+			<li>push</li>
 		<ul>
 	</body>
 </html> 
