--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<li>push.egoing</li>
 			<li>pull.leezche</li>
 			<li>conflict.egoing.leezche</li>
+			<li>스태시</li>
 		<ul>
 	</body>
 </html> 
